force-app/main/default/objects/ASU_STDNT_RETENTION__x/ASU_STDNT_RETENTION__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/1O7pLHNfep-NR_AwGtlYAJyDaVz_r3oQdxHCQaCjCuYc/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>ASU_STDNT_RETENTIONs</externalName>
    <label>Student Retention (external)</label>
    <pluralLabel>Student Retention (external)</pluralLabel>
</CustomObject>