force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/ASR_INDICATOR__c.field-meta.xml
<CustomField>
    <fullName>ASR_INDICATOR__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION.ASR_INDICATOR</description>
    <externalDeveloperName>ASR_INDICATOR</externalDeveloperName>
    <label>Academic Status Report</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>