force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/AVG_MYASU_COHORT__c.field-meta.xml
<CustomField>
    <fullName>AVG_MYASU_COHORT__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION.AVG_MYASU_COHORT</description>
    <externalDeveloperName>AVG_MYASU_COHORT</externalDeveloperName>
    <label>MyASU Usage Cohort</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>