force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/CI_INDEX_INDICATOR__c.field-meta.xml
<CustomField>
    <fullName>CI_INDEX_INDICATOR__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION.CI_INDEX_INDICATOR</description>
    <externalDeveloperName>CI_INDEX_INDICATOR</externalDeveloperName>
    <label>CI Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>