force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/CUM_GPA_INDICATOR__c.field-meta.xml
<CustomField>
    <fullName>CUM_GPA_INDICATOR__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION.CUM_GPA_INDICATOR</description>
    <externalDeveloperName>CUM_GPA_INDICATOR</externalDeveloperName>
    <label>Cumulative GPA</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>