force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/EADVISOR_INDICATOR__c.field-meta.xml
<CustomField>
    <fullName>EADVISOR_INDICATOR__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION.EADVISOR_INDICATOR</description>
    <externalDeveloperName>EADVISOR_INDICATOR</externalDeveloperName>
    <label>eAdvisor Indicator</label>
    <length>30</length>
    <type>Text</type>
</CustomField>