force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION_SNP.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Retention (external)</relationshipLabel>
    <relationshipName>Student_Retention_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>