force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/ENRL_HOLD_COUNT__c.field-meta.xml
<CustomField>
    <fullName>ENRL_HOLD_COUNT__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION.ENRL_HOLD_COUNT</description>
    <externalDeveloperName>ENRL_HOLD_COUNT</externalDeveloperName>
    <label>Enrollment Holds</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>