force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/FA_INDICATOR__c.field-meta.xml
<CustomField>
    <fullName>FA_INDICATOR__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION.FA_INDICATOR</description>
    <externalDeveloperName>FA_INDICATOR</externalDeveloperName>
    <label>Financial Aid Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>