force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/FINANCIAL_HOLD__c.field-meta.xml
<CustomField>
    <fullName>FINANCIAL_HOLD__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION.FINANCIAL_HOLD</description>
    <externalDeveloperName>FINANCIAL_HOLD</externalDeveloperName>
    <label>Financial Hold</label>
    <length>1</length>
    <type>Text</type>
</CustomField>