force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/NEXT_TERM_ENROLLED__c.field-meta.xml
<CustomField>
    <fullName>NEXT_TERM_ENROLLED__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION.NEXT_TERM_ENROLLED</description>
    <externalDeveloperName>NEXT_TERM_ENROLLED</externalDeveloperName>
    <label>Enrolled in Next Term</label>
    <length>1</length>
    <type>Text</type>
</CustomField>