force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/PAST_DUE_TIP__c.field-meta.xml
<CustomField>
    <fullName>PAST_DUE_TIP__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION.PAST_DUE_TIP</description>
    <externalDeveloperName>PAST_DUE_TIP</externalDeveloperName>
    <label>Past Due TIP</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>