force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/PROBATION_INDICATOR__c.field-meta.xml
<CustomField>
    <fullName>PROBATION_INDICATOR__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION.PROBATION_INDICATOR</description>
    <externalDeveloperName>PROBATION_INDICATOR</externalDeveloperName>
    <label>Probation Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>