force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/STRM__c.field-meta.xml
<CustomField>
    <fullName>STRM__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION.STRM</description>
    <externalDeveloperName>STRM</externalDeveloperName>
    <label>Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student Retention (external)</relationshipLabel>
    <relationshipName>Student_Retention_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>