force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/TERM_MYASU_USAGE__c.field-meta.xml
<CustomField>
    <fullName>TERM_MYASU_USAGE__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION.TERM_MYASU_USAGE</description>
    <externalDeveloperName>TERM_MYASU_USAGE</externalDeveloperName>
    <label>MyASU Usage Term</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>