force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/TOT_IND__c.field-meta.xml
<CustomField>
    <fullName>TOT_IND__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION.TOT_IND</description>
    <label>Total Indicators</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>