force-app/main/default/objects/ASU_STDNT_RETENTION__x/fields/TRANSCRIPTS_SENT_COUNT__c.field-meta.xml
<CustomField>
    <fullName>TRANSCRIPTS_SENT_COUNT__c</fullName>
    <description>Data sourced from ASUDW.ASU_STDNT_RETENTION.TRANSCRIPTS_SENT_COUNT</description>
    <externalDeveloperName>TRANSCRIPTS_SENT_COUNT</externalDeveloperName>
    <label>Transcripts Sent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>